# ctmtuci-schedule

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.MD
src/: datatypes.rs  main.rs  oldcode  sheet_parser.rs  sheet_updater.rs  tg.rs  utils.rs
src/dialoge/: fetch.rs
