[package]
name = "ctmtuci"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
calamine = "0.26.1"
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.25"
pretty_env_logger = "0.5"
teloxide = { version = "0.13", features = ["macros", "webhooks", "rustls"]}
chrono ={ version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
bytes = "1.9.0"
